Accessibility Fix - Change links to increase color contrast
Changed to a darker blue and semi bold, as well as added focus to the selector

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a img.aligncenter{display:block;margin-left:auto;margin-right:auto}.wp-caption{b
 /*!
 Text Section
 */a{color:#007bbf}h1{font-size:2.1875rem;margin-top:.25rem}
-h1,h2{color:#0055a5;font-weight:700}h2{line-height:110%;margin-top:.25rem;font-size:1.625rem}
+h1,h2{color:#0055a5;font-weight:700}a,a:focus{color:#0055a5;font-weight:500}h2{line-height:110%;margin-top:.25rem;font-size:1.625rem}
 h2.cta-h2{text-transform:uppercase}p{font-size:1rem}div.entry-content h3{line-height:110%;margin-top:.25rem;font-size:1.525rem;color:#6d6d6d;font-weight:600}
 /*!
 Section 1: Foundation
